# BeautifulNumbers

BeautifulNumbers/: CMakeLists.txt  README.md  task.md
BeautifulNumbers/inc/: digit.hpp  factorial.hpp  permutations.hpp  quantity_by_sum.hpp
BeautifulNumbers/src/: digit.cpp  factorial.cpp  permutations.cpp  quantity_by_sum.cpp  solution.cpp
BeautifulNumbers/tests/: CMakeLists.txt  factorial_tests.cpp  permutations_tests.cpp  quantity_by_sum_tests.cpp
